--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>첫 깃허브 페이지 입니다</h1>
+  <h1>두번째 깃허브 페이지 입니다. <br> 깃허브 팔로우 해주세요 맞팔하러 갈께요! <br> 티스토리 블로그도 시작했어요! </h1>
   <a href="https://park1005.tistory.com/2"> 티스토리 홈페이지-동영상 </a><br>
   <img src = "git.png" />
 </body>
