--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>두번째 깃허브 페이지 입니다. <br> 깃허브 팔로우 해주세요 맞팔하러 갈께요! <br> 티스토리 블로그도 시작했어요! </h1>
-  <a href="https://park1005.tistory.com/2"> 티스토리 홈페이지-동영상 </a><br>
+  <h1>광명융합기술교육원 데이터분석과 2060340016 박천호 입니다. <br> 과제를 티스토리 블로그에 업로드 합니다. <br>  </h1>
+  <a href="https://park1005.tistory.com/2"> Github활용과제 2020.04.06 </a><br>
+  
+  <a href="https://park1005.tistory.com/3"> Sourcetree활용과제 + Eclipse 복습 2020.04.07 </a><br>
   <img src = "git.png" />
 </body>
 </html>
